force-app/main/default/objects/Case/fields/Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Owner of the linked account</description>
    <label>Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>