force-app/main/default/objects/Case/fields/Final_Audit_Grade__c.field-meta.xml
<CustomField>
    <fullName>Final_Audit_Grade__c</fullName>
    <description>QC score</description>
    <label>Final Audit Grade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>