force-app/main/default/objects/Case/fields/Maintenance_Account__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Maintenance Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Maintenance_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>