force-app/main/default/objects/Case/fields/Maintenance_Levels__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Levels__c</fullName>
    <label>Maintenance Levels</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Level-1</fullName>
            </value>
            <value>
                <fullName>Level-2</fullName>
            </value>
            <value>
                <fullName>Level-3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>