force-app/main/default/objects/Case/fields/Sub_Reason__c.field-meta.xml
<CustomField>
    <fullName>Sub_Reason__c</fullName>
    <label>Sub Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reason</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Power</fullName>
            </value>
            <value>
                <fullName>Battery Issues</fullName>
            </value>
            <value>
                <fullName>Smoke</fullName>
            </value>
            <value>
                <fullName>Voltage</fullName>
            </value>
            <value>
                <fullName>Fire</fullName>
            </value>
            <value>
                <fullName>Heat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>