force-app/main/default/objects/Case/recordTypes/Maintenance.recordType-meta.xml
<RecordType>
    <fullName>Maintenance</fullName>
    <active>true</active>
    <businessProcess>Customer Service</businessProcess>
    <label>Maintenance</label>
</RecordType>