force-app/main/default/objects/Case/validationRules/Prevent_Case_Creation.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Case_Creation</fullName>
    <active>false</active>
    <errorConditionFormula>ISNEW()</errorConditionFormula>
    <errorMessage>YOU CAN&apos;T CREATE THIS CASE</errorMessage>
</ValidationRule>